# mechatronic_systems

./: README.md
mapping/: CMakeLists.txt
mapping/src/: mapping.cpp
object_detection_and_identification/: CMakeLists.txt  package.xml
object_detection_and_identification/src/: code.cpp
social_perception/: CMakeLists.txt
social_perception/src/: code.cpp
